# m42839360-cell.github.io

./: .env.example  .gitignore  .gitlab-ci.yml  .last_build  Dockerfile  Gemfile  LICENSE  README.md  _config.yml  archive.html  config.yml  config.yml.example  index.html  justfile  pelicanconf.py  publishconf.py  pyproject.toml
.github/workflows/: auto-blog.yml  publish.yml
_layouts/: default.html  post.html
_posts/: 2025-10-22-enhancing-the-roboblog-examples-adding-time-and-date-endpoints-with-fastapi.md
archive/: Dockerfile  pyproject.toml
archive/data/: example_commits.json
assets/css/: style.css
backlog/: config.yml
backlog/tasks/: task-1 - Add-support-for-human-written-posts-with-emoji-indicators.md  task-1 - Repository-Setup.md  task-10 - GitHub-Pages-Configuration.md  task-11 - GitHub-Secrets-Setup.md  task-12 - GitHub-Actions-Workflow.md  task-13 - Update-Configuration-for-GitHub.md  task-14 - GitHub-Integration-Testing.md  task-15 - Final-Documentation.md  task-16 - Optional-Enhancements.md  task-17 - Improve-error-handling-for-GitHub-API-issues.md  task-18 - Use-Commits-API-instead-of-Events-API-for-fetching-commits.md  task-2 - Configuration-System.md  (+13 more)
content/: 2025-11-17-nanochat-run-1.md  2025-11-18-kagent-custom-agents.md
data/: commits.json
human-posts/: 2015-11-17-nanochat-run-1.md  2015-11-18-kagent-custom-agents.md  welcome.md
jekyll/: _config.yml  _config.yml.template  archive.html  index.html
roboblog-chart/: Chart.yaml  README.md  values.yaml
scripts/: fetch_commits.py  generate_post.py  run_blog_update.py
(+36 files in other folders)
